fixed intell suggestions display and aligned content

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -13,7 +13,7 @@
   font-size: 60px;
   font-family: Helvetica, sans-serif;
   letter-spacing: -0.045em;
-  text-decoration: underline;
+  // text-decoration: underline;
   padding-top: 160px;
-  text-decoration-thickness: 12px;
+  // text-decoration-thickness: 12px;
 }
