--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -2,7 +2,6 @@
   background-color: $dark-blue;
   height: 85px;
   // transition: 0.5s background-color ease;
-  transition: none;
   color: white;
   position: fixed;
 }
@@ -24,4 +23,5 @@
   font-weight: 500;
   font-size:15px;
   margin: 0;
+
 }
