--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -53,7 +53,7 @@ label {
 
   background: $dark-blue-lazuli;
   color: white;
-  padding: 6px;
+  padding: 4px;
   border-radius: 2px;
   border:none;
   margin-top: 10px;
